--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel='stylesheet'href='bee.css'>
         <title>Vamos nessa</title>
     </head>
     <body>
-
+        <div class='tilo'> 
         <h1>Esse era o lugar onde</h1>
+        </div>
+        <div class='sub'>
         <p>Essa e a cor que voce escolheu?</p>
-        <p>{{ nome }}</p>
+        </div>
+        <span class='cor'> <p>{{ nome }}</p></span>
+        <p><a href="http://127.0.0.1:5000/sugar"><img src="https://lh3.googleusercontent.com/cGmdhvro7gu7gmdghgIAjXpo7dy6Hg5qryAOO-Nc7WS8d3junQ4QAwu3HaGmGJxZuJOW_w8Ji01yFtxISu1a0nbRP8hYq9jRp3Wo=w600" alt="{{ nome }}"></a></p>
+        <h2>Aperte no gato para voltar</h2>
+        
 
     </body>
 </html>
