--- a/templates/oder.html
+++ b/templates/oder.html
@@ -5,11 +5,21 @@
     </head>
     <body>
 
-        <h1>Digite uma cor</h1>
+        <h1 id="boss">Digite um nome de Pokemon</h1>
+        <p><img src="https://data.whicdn.com/images/218337085/original.gif" height="47" width="32"  alt="ducklick"></p>
         <p><form method="POST">
             <div><label><input type="text" name="nome"></div></label>
                 <input type="submit">
         </form></p>
+        <img src="https://data.whicdn.com/images/257486981/original.gif" height="47" width="28"  alt="ducklick">
+        <p><input type="radio" name="mw">
+        <img src="https://i.gifer.com/5GpG.gif" width="25" height="25"></p>
+        <p><input type="radio" name="mw">
+        <img src="https://i.gifer.com/4bXB.gif" width="25" height="25"></p>
+        <p><input type="radio" name="mw">
+        <img src="https://i.gifer.com/1aG7.gif" width="25" height="25"></p>
+        <p><input type="radio" name="mw">
+        <img src="https://i.gifer.com/YlVy.gif" width="25" height="25"></p>
 
     </body>
 </html>
