--- a/templates/index1.html
+++ b/templates/index1.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel='stylesheet'href='bee.css'>
         <title>Vamos nessa</title>
     </head>
     <body>
@@ -12,8 +11,9 @@
         <p>Essa e a cor que voce escolheu?</p>
         </div>
         <span class='cor'> <p>{{ nome }}</p></span>
-        <p><a href="http://127.0.0.1:5000/sugar"><img src="https://lh3.googleusercontent.com/cGmdhvro7gu7gmdghgIAjXpo7dy6Hg5qryAOO-Nc7WS8d3junQ4QAwu3HaGmGJxZuJOW_w8Ji01yFtxISu1a0nbRP8hYq9jRp3Wo=w600" alt="{{ nome }}"></a></p>
+        <p><a href="http://127.0.0.1:5000/pokered"><img src="https://lh3.googleusercontent.com/cGmdhvro7gu7gmdghgIAjXpo7dy6Hg5qryAOO-Nc7WS8d3junQ4QAwu3HaGmGJxZuJOW_w8Ji01yFtxISu1a0nbRP8hYq9jRp3Wo=w600" alt="{{ nome }}"></a></p>
         <h2>Aperte no gato para voltar</h2>
+        <p> <a href="http://127.0.0.1:5000/komi"><img src={{ mw }} alt= {{ nome }}></a></p>
         
 
     </body>
